# gpas-analysis-tools

./: .gitignore  README.md  foo.ipynb  pyproject.toml  setup.cfg
src/gpas_analysis_tools/: cli.py  genetics.py  species.py
test-suite/ntms/: .gitignore  TEST_MASTER_TABLE.csv  TEST_MASTER_TABLE_renamed.csv  walkthrough-tables.ipynb
test-suite/ntms/data/effects/: SRR6981952.effects.csv
test-suite/ntms/data/main_report/: 05c9ed42-e452-48d9-bee8-993320c428e8.main_report_v2.4.1.json  77434f41-625f-424a-97c5-8d318ce11410.main_report_v2.4.1.json  SRR6981952.main_report.json  SRR6982035.main_report.json  bd821678-1865-48bc-a836-8d97a7e99b3d.main_report_v2.4.1.json
test-suite/ntms/data/mutations/: 05c9ed42-e452-48d9-bee8-993320c428e8.mutations_v2.4.1.csv  77434f41-625f-424a-97c5-8d318ce11410.Mycobacterium_avium_mutations_v2.4.1.csv  SRR6981952.mutations.csv  bd821678-1865-48bc-a836-8d97a7e99b3d.mutations_v2.4.1.csv
test-suite/ntms/data/predictions/: SRR6981952.predictions.csv
test-suite/ntms/data/variants/: .gitignore  SRR6981952.variants.csv  bd821678-1865-48bc-a836-8d97a7e99b3d.variants_v2.4.1.csv
test-suite/ntms/tables/: .gitignore  EFFECTS.csv  EFFECTS.parquet  MUTATIONS-CORRECTED.parquet  MUTATIONS.parquet  PREDICTIONS.csv  PREDICTIONS.parquet  SPECIES.csv  SPECIES.parquet  TEST_MASTER_TABLE_renamed.csv  TEST_MASTER_TABLE_renamed.parquet  VARIANTS.parquet
