[build-system]
requires = [
    "setuptools >= 60",
    "wheel >= 0.37.1",
]
build-backend = 'setuptools.build_meta'

[project]
name = "gpas-analysis-tools"
version = "0.1.0"
description = "A command line client to analyse outputs from GPAS"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Philip W Fowler" },
]
urls = { Homepage = "https://github.com/fowler-lab/gpas-analysis-tools" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "tqdm",
    "pandas < 3.0.0",
    "pyarrow",
    "pandarallel",
    "defopt == 6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.1",
]

[project.scripts]
gat = "gpas_analysis_tools.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true