[metadata]
name = gpas-analysis-tools
version = 0.1.0
description = A command line client to analyse outputs from GPAS 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/fowler-lab/gpas-analysis-tools
author = Philip W Fowler
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.10
[options]
packages = find:
package_dir =
    = src
include_package_data = True
platforms = any
python_requires = >= 3.10
install_requires =
    tqdm
    pandas
    pyarrow
    pandarallel
    defopt == 6.4.0
[bdist_wheel]
universal = 0
[options.extras_require]
dev =
    pytest >= 7.0.1
[options.entry_points]
console_scripts =
    gat = gpas_analysis_tools.cli:main
[options.packages.find]
where = src
[mypy]
ignore_missing_imports = True
